Little update agent.py

--- a/evry_project_strategy/package.xml
+++ b/evry_project_strategy/package.xml
@@ -21,6 +21,8 @@
   <depend>rospy</depend>
   <depend>sensor_msgs</depend>
 
+  <!--<run_depend>evry_project_plugins</run_depend>-->
+
   <export>
 
 
